prevent scrolling on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,7 @@ label.active {
     }
     body {
         gap: 10px;
+        max-height: 100vh;
     }
     .header {
         font-size: 42px;
